--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,12 +3,21 @@ version: "2"
 linters:
   default: standard
 
+  enable:
+    - bodyclose
+    - funcorder
+    - modernize
+    - unconvert
+    - unparam
+    - usestdlibvars
+
   settings:
     staticcheck:
       checks:
         - all
         - -S1005
         - -ST1000
+
   
 formatters:
   enable:
